# melee-matchup

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/: api_client.py  collect.py  collector.py  database.py  export_app_data.py  features.py  model.py  queries.py  tuning.py  validation.py
tests/: test_database.py  test_elo.py  test_features.py  test_validation.py
