[project]
name = "melee-matchup"
version = "0.1.0"
description = "Predicting tournament set outcomes in competitive Super Smash Bros Melee"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pandera>=0.18",
    "pre-commit>=3.6",
]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "shap>=0.45",
    "optuna>=3.5",
]
app = [
    "streamlit>=1.30",
    "mlflow>=2.10",
]

[project.scripts]
melee-collect = "src.collect:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
